welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value east
  setDirection(east)
               ^DwarfCode:7: error: not found: value west
  setDirection(west)
               ^