welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur()) {
  setDirection(east)
  while ((!estSurBiscuit()) || (!estFaceMur())) {
    avance()
  }
  prendBiscuit()
  setDirection(west)
  while (!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  retourne()
}